fix outline of disabled buttons and button getting cut off

--- a/bigbluebutton-html5/imports/ui/components/button/styles.scss
+++ b/bigbluebutton-html5/imports/ui/components/button/styles.scss
@@ -101,7 +101,7 @@
     outline: none;
   }
 
-  &:focus:not([aria-disabled="true"]) {
+  &:focus {
     outline-color: transparent;
     outline-width: 2px;
     outline-style: dotted;
